plugins {
    id("java")
    id("jacoco")
    id("application")
    id("org.openjfx.javafxplugin") version "0.1.0"
}

group = "ru.nsu.abramenko"
version = "1.0-SNAPSHOT"

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
    testImplementation(platform("org.junit:junit-bom:5.9.1"))
    testImplementation("org.junit.jupiter:junit-jupiter")
    implementation ("org.jetbrains:annotations:16.0.2")
    implementation ("org.json:json:20171018")
    testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.2")
    testImplementation("org.junit.jupiter:junit-jupiter-engine:5.7.2")
    compileOnly("org.projectlombok:lombok:1.18.32")
    compileOnly("org.jetbrains:annotations:23.0.0")
    testAnnotationProcessor("org.projectlombok:lombok:1.18.32")
    annotationProcessor("org.projectlombok:lombok:1.18.32")
}

test {
    useJUnitPlatform()
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}


tasks.withType(JavaExec).configureEach {
    doFirst {
        jvmArgs = [
                "--module-path", configurations.runtimeClasspath.getAsPath(),
                "--add-modules", "javafx.controls,javafx.fxml"
        ]
    }
}

javafx {
    version = "21"
    modules = ["javafx.controls", "javafx.fxml"]
}

application {
    mainClass.set("ru.nsu.abramenko.Main")
}